--- a/bird_vs_drone.ipynb
+++ b/bird_vs_drone.ipynb
@@ -353,6 +353,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "SGBWQql2FMXi",
         "outputId": "c5e1a720-e991-4bb1-858d-000fb16839a4"
       },
